<resources>
    <string name="app_name">TasteBuds</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="account">Account</string>
    <string name="favourites">Favourites</string>
    <string name="shopping_list">Shopping List</string>
    <string name="recipe_finder">Recipe Finder</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>
    <string name="search_hint">Search Recipe</string>
    <string name="search_menu_title">Search for Recipes</string>
</resources>
