<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigationView">
    <group android:id="@+id/group1" android:checkableBehavior="single">
        <item
            android:id="@id/homeFragment"
            android:title="@string/home"
            android:icon="@drawable/ic_home_black_24dp"/>
        <item
            android:id="@id/accountFragment"
            android:title="@string/account"
            android:icon="@drawable/ic_account_circle_black_24dp"/>
        <item
            android:id="@id/favouritesFragment"
            android:title="@string/favourites"
            android:icon="@drawable/ic_account_circle_black_24dp"/>
        <item
            android:id="@id/shoppingListFragment"
            android:title="@string/shopping_list"
            android:icon="@drawable/ic_account_circle_black_24dp"/>
    </group>

    <item
        android:id="@id/settingsFragment"
        android:title="@string/settings"
        android:icon="@drawable/ic_account_circle_black_24dp"/>
    <item
        android:id="@id/helpFragment"
        android:title="@string/help"
        android:icon="@drawable/ic_account_circle_black_24dp"/>
</menu>